--- a/client/src/app/features/shop/shop.component.html
+++ b/client/src/app/features/shop/shop.component.html
@@ -1,20 +1,28 @@
 <div class="flex flex-col gap-3">
-  <div class="flex justify-end gap-3">
-    <button mat-stroked-button (click)="openFilterDialog()">
-      <mat-icon>filter_list</mat-icon>
-      Filters
-    </button>
-    <button mat-stroked-button [matMenuTriggerFor]="sortMenu ">
-      <mat-icon>swap_vert</mat-icon>
-      Sort
-    </button>
+  <div class="flex justify-between">
+    <mat-paginator class="bg-white" (page)="handlePageEvent($event)" [length]="products?.count" [pageSize]="shopParams.pageSize"
+      [showFirstLastButtons]="true" [pageSizeOptions]="pageSizeOptions" [pageIndex]="shopParams.pageNumber -1 "
+      aria-label="Select Page">
+    
+    </mat-paginator>
+    <div class="flex gap-3">
+      <button mat-stroked-button (click)="openFilterDialog()">
+        <mat-icon>filter_list</mat-icon>
+        Filters
+      </button>
+      <button mat-stroked-button [matMenuTriggerFor]="sortMenu ">
+        <mat-icon>swap_vert</mat-icon>
+        Sort
+      </button>
+    </div>
+
   </div>
 
   <div class="grid grid-cols-5 gap-4">
-    @for (product of products; track product.id) {
-      <app-product-item [product]="product"></app-product-item>
+    @for (product of products?.data; track product.id) {
+    <app-product-item [product]="product"></app-product-item>
     }
-</div>
+  </div>
 
 </div>
 
@@ -22,9 +30,9 @@
 <mat-menu #sortMenu="matMenu">
   <mat-selection-list [multiple]="false" (selectionChange)="onSortChange($event)">
     @for (sort of sortOptions; track $index) {
-      <mat-list-option [value]="sort.value" [selected]="shopParams.sort === sort.value">
-        {{sort.name}}
-      </mat-list-option>
+    <mat-list-option [value]="sort.value" [selected]="shopParams.sort === sort.value">
+      {{sort.name}}
+    </mat-list-option>
     }
   </mat-selection-list>
 </mat-menu>
