--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -22,3 +22,12 @@ $customTheme : mat.define-theme();
 .container{
     @apply mx-auto max-w-screen-2xl 
 }
+
+
+.text-primary {
+    color: #7d00fa;
+}
+
+button.match-input-heigth {
+    height: var(--mat-form-field-container-heigth) !important;
+}
