--- a/client/src/app/features/test-error/test-error.component.html
+++ b/client/src/app/features/test-error/test-error.component.html
@@ -6,3 +6,16 @@
 <button mat-stroked-button (click)="get400ValidationError()">Test 400 Validation Erorr</button>
 
 </div>
+
+
+@if(validationErrors){
+
+    <div class="mx-auto max-w-lg mt-5 bg-red-100 ">
+        <ul class="space-y-2 p-2 ">
+            @for (error of validationErrors; track $index) {
+
+                <li class="text-red-800">{{error}}</li>
+            }
+        </ul>
+    </div>
+}
