--- a/client/src/app/shared/component/server-error/server-error.component.html
+++ b/client/src/app/shared/component/server-error/server-error.component.html
@@ -1,3 +1,16 @@
-<div class="container mt-5">
-    <h1 class="text-3xl">Internal Server Error</h1>
+<div class="container mt-5 p-4 bg-gray-100 rounded shadow-lg">
+    <h1 class="text-2xl font-semibold mb-4">Internal Server Error</h1>
+
+    @if(error){
+        <h5 class="text-red-600">Error: {{error.message}}</h5>
+        <p class="font-bold mb-2">This Error Comes From The Server, Not Angular</p>
+        <p class="mb-2">What To DO Next?</p>
+        <ol class="list-decimal ml-5 mb-4">
+            <li class="mb-1">Check The Netowrk Tab in Chome Dev Tools</li>
+        </ol>
+        <h5 class="text-lg font-semibold mb-2">Stock Trace!</h5>
+        <mat-card class="p-4 bg-white">
+            <code class="block whitespace-pre-wrap">{{error.details}}</code>
+        </mat-card>
+    }
 </div>
