--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -19,3 +19,6 @@
         </div>
     </div>
 </header>
+@if(busyService.loading){
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+}
