--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -9,7 +9,9 @@
         </nav>
 
         <div class="flex gap-3 align-middle">
-                <a routerLink="/cart" routerLinkActive="active" matBadge="5" matBageSize="large" class="custom-badge mt-2 mr-2 ">
+                <a routerLink="/cart" routerLinkActive="active"
+                 matBadge="{{cartService.itemCount()}}" matBageSize="large" 
+                 class="custom-badge mt-2 mr-2 ">
                     <mat-icon>shopping_cart</mat-icon>
                 </a>
 
