--- a/client/src/app/features/shop/product-details/product-details.component.html
+++ b/client/src/app/features/shop/product-details/product-details.component.html
@@ -8,6 +8,8 @@
 
                 <div>
                     <h1 class="text-2xl font-semibold text-gray-900">{{product.name}}</h1>
+
+                    <p>You Have {{quantityInCart}} of this item in your cart</p>
                     <div class="mt-4 items-center gap-4 flex">
                         <p class="text-3xl font-extrabold text-gray-900">
                             {{product.price | currency}}
@@ -15,15 +17,16 @@
                     </div>
 
                     <div class="flex gap-4 mt-6">
-                        <button 
+                        <button [disabled]="quanitty == quantityInCart"
+                        (click)="updateCart()"
                             mat-flat-button class="match-input-heigth">
                             <mat-icon>shopping_cart</mat-icon>
-                            Add To Cart
+                            {{getButtonText()}}
                         </button>
 
                         <mat-form-field appearance="outline" class="flex">
                             <mat-label>Quantity</mat-label>
-                            <input matInput  type="number">
+                            <input matInput min="0" [(ngModel)]="quanitty" type="number">
                         </mat-form-field>
                     </div>
 
