--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -14,9 +14,16 @@
                  class="custom-badge mt-2 mr-2 ">
                     <mat-icon>shopping_cart</mat-icon>
                 </a>
+                @if(accountService.currentUser()){
+                        <button mat-stroked-button (click)="logout()">logout</button>
+                }
+                @else {
+                    <button routerLink="/account/login" mat-stroked-button >Login</button>
+                    <button routerLink="/account/register" mat-stroked-button >Register</button>
 
-                <button routerLink="/account/login" mat-stroked-button >Login</button>
-                <button routerLink="/account/register" mat-stroked-button >Register</button>
+                }
+
+               
 
         </div>
     </div>
