--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -15,7 +15,10 @@
                     <mat-icon>shopping_cart</mat-icon>
                 </a>
                 @if(accountService.currentUser()){
-                        <button mat-stroked-button (click)="logout()">logout</button>
+                        <button mat-button [matMenuTriggerFor]="menu">
+                            <mat-icon>arrow_drop-down</mat-icon>
+                            <span>{{accountService.currentUser()?.email}}</span>
+                        </button>
                 }
                 @else {
                     <button routerLink="/account/login" mat-stroked-button >Login</button>
@@ -31,3 +34,19 @@
 @if(busyService.loading){
     <mat-progress-bar mode="indeterminate" class="fixed top-20 z-50"></mat-progress-bar>
 }
+
+<mat-menu #menu="matMenu" class="px-5">
+    <button mat-menu-item class="px-3" routerLink="/cart">
+        <mat-icon>shopping_cart</mat-icon>
+        My Cart
+    </button>
+    <button mat-menu-item class="px-3" routerLink="/orders">
+        <mat-icon>history</mat-icon>
+        My Orders
+    </button>
+<mat-divider></mat-divider>
+    <button mat-menu-item class="px-3"(click)="logout()">
+        <mat-icon>logout</mat-icon>
+        Logout
+    </button>
+</mat-menu>
