--- a/client/src/app/features/account/register/register.component.html
+++ b/client/src/app/features/account/register/register.component.html
@@ -3,30 +3,15 @@
       <div class="text-center mb-6">
         <h1 class="text-3xl font-semibold text-primary">Register</h1>
       </div>
+        <app-text-input label="First Name" formControlName="firstName"/>
+        <app-text-input label="Last Name" formControlName="lastName"/>
+        <app-text-input label="email" formControlName="email"/>
+        <app-text-input label="password" formControlName="password" type="password"/>
 
-      <mat-form-field appearance="outline" class="w-full mb-4">
-        <mat-label>First Name</mat-label>
-        <input formControlName="firstName" type="test" placeholder="john" matInput />
-        @if(registerFrom.get('firstName')?.hasError('required')){
 
-                <mat-error>First Name is Required</mat-error>
-        }
-      </mat-form-field>
-
-      <mat-form-field appearance="outline" class="w-full mb-4">
-        <mat-label>Last Name </mat-label>
-        <input formControlName="lastName" type="text" placeholder="Smith" matInput />
-      </mat-form-field>
-  
-      <mat-form-field appearance="outline" class="w-full mb-4">
-        <mat-label>Email Address</mat-label>
-        <input formControlName="email" type="email" placeholder="Name@exmaple.com" matInput />
-      </mat-form-field>
       
-      <mat-form-field appearance="outline" class="w-full mb-4">
-          <mat-label>Password</mat-label>
-          <input formControlName="password" type="password" placeholder="Password" matInput />
-        </mat-form-field>
+  
+   
         @if(validtionErrors)
         {
             <div class=" mb-3 p-4 bg-red-100 text-red-600">
@@ -43,8 +28,8 @@
     </form>
   </mat-card>
   
-
+<!-- 
   <mat-card class="max-w-lg mx-auto mt-3 p-2">
     <pre>From Values: {{registerFrom.value | json}}</pre>
     <pre>From Status: {{registerFrom.status }}</pre>
-  </mat-card>
+  </mat-card> -->
