Checkout page layout

--- a/client/src/app/features/checkout/checkout.component.html
+++ b/client/src/app/features/checkout/checkout.component.html
@@ -1,3 +1,28 @@
-<div class="mt-5">
-    <h1 class="text-2xl">Only Authzorized Users Should be able to See This!</h1>
+<div class="flex mt-32 gap-6">
+    <div class="w-3/4">
+        <mat-stepper #stepper class="bg-white border border-gray-200 shadow-sm">
+            <mat-step label="Address">
+                Address Form
+            </mat-step>
+
+            <mat-step label="Shipping">
+                Delivery Form
+            </mat-step>
+
+            <mat-step label="Payment">
+                Payment Form
+            </mat-step>
+
+            <mat-step label="Confirmation">
+                Review  Form
+            </mat-step>
+        </mat-stepper>>
+    </div>
+
+    <div class="w-1/4">
+        <app-order-summary></app-order-summary>
+    </div>
+
 </div>
+
+
