--- a/client/src/app/shared/components/order-summary/order-summary.component.html
+++ b/client/src/app/shared/components/order-summary/order-summary.component.html
@@ -24,11 +24,15 @@
                 </dl>
 
             </div>
-            <div class="flex flex-col gap-2">
-                <button routerLink="/checkout" mat-flat-button>Checkout</button>
-                <button routerLink="/shop" mat-button>Continue Shopping</button>
+            @if(location.path() !== '/checkout'){
+                <div class="flex flex-col gap-2">
+                    <button routerLink="/checkout" mat-flat-button>Checkout</button>
+                    <button routerLink="/shop" mat-button>Continue Shopping</button>
+    
+                </div>
 
-            </div>
+            }
+            
         </div>
     </div>
 
