--- a/client/src/app/features/checkout/checkout.component.html
+++ b/client/src/app/features/checkout/checkout.component.html
@@ -16,7 +16,12 @@
             </mat-step>
 
             <mat-step label="Shipping">
-                Delivery Form
+                <app-checkout-delivery></app-checkout-delivery>
+                <div class="flex justify-between mt-6">
+                    <button  matStepperPrevious mat-stroked-button>Back</button>
+                    <button matStepperNext mat-flat-button>Next</button>
+                </div>
+                
             </mat-step>
 
             <mat-step label="Payment">
@@ -26,7 +31,7 @@
             <mat-step label="Confirmation">
                 Review  Form
             </mat-step>
-        </mat-stepper>>
+        </mat-stepper>
     </div>
 
     <div class="w-1/4">
