--- a/client/src/app/features/checkout/checkout.component.html
+++ b/client/src/app/features/checkout/checkout.component.html
@@ -1,43 +1,49 @@
 <div class="flex mt-32 gap-6">
-    <div class="w-3/4">
-        <mat-stepper (selectionChange)="onStepChange($event)" #stepper class="bg-white border border-gray-200 shadow-sm">
-            <mat-step label="Address">
-                <div id="address-element"></div>
-                <div class="flex justify-end mt01">
-                    <mat-checkbox [checked]="saveAddress" (change)="onSaveAddressCheckBoxChange($event)">
-                        Save as Default Address
-                    </mat-checkbox>
-                </div>
-                <div class="flex justify-between mt-6">
-                    <button routerLink="/shop" mat-stroked-button>Continue Shopping</button>
-                    <button matStepperNext mat-flat-button>Next</button>
+  <div class="w-3/4">
+    <mat-stepper
+      (selectionChange)="onStepChange($event)"
+      #stepper
+      class="bg-white border border-gray-200 shadow-sm"
+    >
+      <mat-step label="Address">
+        <div id="address-element"></div>
+        <div class="flex justify-end mt01">
+          <mat-checkbox
+            [checked]="saveAddress"
+            (change)="onSaveAddressCheckBoxChange($event)"
+          >
+            Save as Default Address
+          </mat-checkbox>
+        </div>
+        <div class="flex justify-between mt-6">
+          <button routerLink="/shop" mat-stroked-button>
+            Continue Shopping
+          </button>
+          <button matStepperNext mat-flat-button>Next</button>
+        </div>
+      </mat-step>
 
-                </div>
-            </mat-step>
+      <mat-step label="Shipping">
+        <app-checkout-delivery></app-checkout-delivery>
+        <div class="flex justify-between mt-6">
+          <button matStepperPrevious mat-stroked-button>Back</button>
+          <button matStepperNext mat-flat-button>Next</button>
+        </div>
+      </mat-step>
 
-            <mat-step label="Shipping">
-                <app-checkout-delivery></app-checkout-delivery>
-                <div class="flex justify-between mt-6">
-                    <button  matStepperPrevious mat-stroked-button>Back</button>
-                    <button matStepperNext mat-flat-button>Next</button>
-                </div>
-                
-            </mat-step>
+      <mat-step label="Payment">
+        <div id="payment-element"></div>
+        <div class="flex justify-between mt-6">
+          <button matStepperPrevious mat-stroked-button>Back</button>
+          <button matStepperNext mat-flat-button>Next</button>
+        </div>
+      </mat-step>
 
-            <mat-step label="Payment">
-                Payment Form
-            </mat-step>
+      <mat-step label="Confirmation"> Review Form </mat-step>
+    </mat-stepper>
+  </div>
 
-            <mat-step label="Confirmation">
-                Review  Form
-            </mat-step>
-        </mat-stepper>
-    </div>
-
-    <div class="w-1/4">
-        <app-order-summary></app-order-summary>
-    </div>
-
+  <div class="w-1/4">
+    <app-order-summary></app-order-summary>
+  </div>
 </div>
-
-
