--- a/client/src/app/features/checkout/checkout.component.html
+++ b/client/src/app/features/checkout/checkout.component.html
@@ -39,7 +39,13 @@
         </div>
       </mat-step>
 
-      <mat-step label="Confirmation"> Review Form </mat-step>
+      <mat-step label="Confirmation">
+        <app-checkout-review></app-checkout-review>
+        <div class="flex justify-between mt-6">
+          <button matStepperPrevious mat-stroked-button>Back</button>
+          <button  mat-flat-button>Pay {{cartService.totals()?.total | currency}}</button>
+        </div>
+      </mat-step>
     </mat-stepper>
   </div>
 
