--- a/client/src/app/features/checkout/checkout-review/checkout-review.component.html
+++ b/client/src/app/features/checkout/checkout-review/checkout-review.component.html
@@ -2,10 +2,10 @@
     <h4 class="text-lg font-semibold">Billing and Delivery Information</h4>
     <dl>
         <dt class="font-medium">Shipping Address</dt>
-        <dd class="mt-1 text-gray-500">Shipping Address goes here</dd>
+        <dd class="mt-1 text-gray-500">{{confirmationToken?.shipping | address}}</dd>
 
         <dt class="font-medium">Shipping Details</dt>
-        <dd class="mt-1 text-gray-500">Shipping Details goes here</dd>
+        <dd class="mt-1 text-gray-500">{{confirmationToken?.payment_method_preview | paymentCard}}</dd>
          
     </dl>
 </div>
