--- a/client/src/app/features/checkout/checkout.component.html
+++ b/client/src/app/features/checkout/checkout.component.html
@@ -41,10 +41,10 @@
       </mat-step>
 
       <mat-step label="Confirmation">
-        <app-checkout-review></app-checkout-review>
+        <app-checkout-review [confirmationToken]="confirmationToken"></app-checkout-review>
         <div class="flex justify-between mt-6">
           <button matStepperPrevious mat-stroked-button>Back</button>
-          <button  mat-flat-button>Pay {{cartService.totals()?.total | currency}}</button>
+          <button (click)="confirmPayment(stepper)"  mat-flat-button>Pay {{cartService.totals()?.total | currency}}</button>
         </div>
       </mat-step>
     </mat-stepper>
