--- a/client/src/app/features/checkout/checkout.component.html
+++ b/client/src/app/features/checkout/checkout.component.html
@@ -20,15 +20,29 @@
           <button routerLink="/shop" mat-stroked-button>
             Continue Shopping
           </button>
-          <button matStepperNext [disabled]="!completionStatus().address" mat-flat-button>Next</button>
+          <button
+            matStepperNext
+            [disabled]="!completionStatus().address"
+            mat-flat-button
+          >
+            Next
+          </button>
         </div>
       </mat-step>
 
       <mat-step label="Shipping" [completed]="completionStatus().delivery">
-        <app-checkout-delivery (deliveryComplete)="handleDeliveryChange($event)"></app-checkout-delivery>
+        <app-checkout-delivery
+          (deliveryComplete)="handleDeliveryChange($event)"
+        ></app-checkout-delivery>
         <div class="flex justify-between mt-6">
           <button matStepperPrevious mat-stroked-button>Back</button>
-          <button [disabled]="!completionStatus().delivery" matStepperNext mat-flat-button>Next</button>
+          <button
+            [disabled]="!completionStatus().delivery"
+            matStepperNext
+            mat-flat-button
+          >
+            Next
+          </button>
         </div>
       </mat-step>
 
@@ -36,19 +50,33 @@
         <div id="payment-element"></div>
         <div class="flex justify-between mt-6">
           <button matStepperPrevious mat-stroked-button>Back</button>
-          <button [disabled]="!completionStatus().card" matStepperNext mat-flat-button>Next</button>
+          <button
+            [disabled]="!completionStatus().card"
+            matStepperNext
+            mat-flat-button
+          >
+            Next
+          </button>
         </div>
       </mat-step>
 
       <mat-step label="Confirmation">
-        <app-checkout-review [confirmationToken]="confirmationToken"></app-checkout-review>
+        <app-checkout-review
+          [confirmationToken]="confirmationToken"
+        ></app-checkout-review>
         <div class="flex justify-between mt-6">
           <button matStepperPrevious mat-stroked-button>Back</button>
-          <button (click)="confirmPayment(stepper)"  mat-flat-button>Pay {{cartService.totals()?.total | currency}}</button>
+          <button [disabled]="!confirmationToken || loading" (click)="confirmPayment(stepper)" mat-flat-button>
+            @if(loading) {
+            <mat-spinner diameter="20"></mat-spinner>
+            } @else{
+            <span> Pay {{ cartService.totals()?.total | currency }}  </span>
+            }
+          </button>
         </div>
       </mat-step>
     </mat-stepper>
-   </div>
+  </div>
 
   <div class="w-1/4">
     <app-order-summary></app-order-summary>
