--- a/client/src/app/features/checkout/checkout-success/checkout-success.component.html
+++ b/client/src/app/features/checkout/checkout-success/checkout-success.component.html
@@ -1,1 +1,37 @@
-<p>checkout-success works!</p>
+<section class="bg-white py-16">
+    <div class="mx-auto max-w-2xl px-4">
+        <h2 class="font-semibold text-2xl mb-2">Thanks For Your Fake Order!</h2>
+        <p class="text-gray-500 mb-8">Your Order <span class="font-medium">#42</span>
+        Will Never be processed as this is a fake shop! , we will not notify you once your order has not shipped 
+
+        </p>
+        <div class="space-y-2 rounded-lg border border-gray-100 bg-gray-50 p-6 mb-8">
+            <dl class=" flex items-center justify-between gap-4">
+                <dt class="font-normal text-gray-500">Date</dt>
+                <dd class="font-medium text-gray-900 text-end">10 May 2025</dd>
+            </dl>
+
+            <dl class=" flex items-center justify-between gap-4">
+                <dt class="font-normal text-gray-500">Payment Method</dt>
+                <dd class="font-medium text-gray-900 text-end">VISA</dd>
+            </dl>
+
+            <dl class=" flex items-center justify-between gap-4">
+                <dt class="font-normal text-gray-500">Address</dt>
+                <dd class="font-medium text-gray-900 text-end">Address Goes Here</dd>
+            </dl>
+
+            <dl class=" flex items-center justify-between gap-4">
+                <dt class="font-normal text-gray-500">Amount</dt>
+                <dd class="font-medium text-gray-900 text-end">100$</dd>
+            </dl>
+
+        </div>
+
+        <div class="flex items-center space-x-4">
+            <button routerLink="/orders/42" mat-flat-button>View Your Order</button>
+            <button routerLink="/shop" mat-stroked-button>Continue Shopping</button>
+        </div>
+
+    </div>
+</section>
