Designing the order component to display order

--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -48,7 +48,7 @@
     <button mat-menu-item routerLink="/cart" class="px-3">
       <mat-icon>shopping_cart</mat-icon> My Cart
     </button>
-    <button mat-menu-item routerLink="/orders" class="px-3">
+    <button mat-menu-item routerLink="/order" class="px-3">
       <mat-icon>history</mat-icon> My Orders
     </button>
     <mat-divider></mat-divider>
