--- a/client/src/app/features/orders/order-detailed/order-detailed.component.html
+++ b/client/src/app/features/orders/order-detailed/order-detailed.component.html
@@ -1,1 +1,96 @@
-<p>order-detailed works!</p>
+@if(order){
+<mat-card class="bg-white py-8 shadow-md max-w-screen-lg mx-auto">
+    <div class="px-4 w-full">
+        <h2 class="text-2xl text-center font-semibold">Order Summary For order #{{order.id}}</h2>
+        <div class="mt-8 py-3 border-t border-gray-200 gap-16 flex">
+            <div class="space-y-2">
+                <h4 class="text-lg font-semibold">Billing and Delivery Information</h4>
+                <dl>
+                    <dt class="font-medium">Shipping Address</dt>
+                    <dd class="mt-1 font-light">Address goes here</dd>
+                </dl>
+
+                <dl>
+                    <dt class="font-medium">Payment Info</dt>
+                    <dd class="mt-1 font-light">Payment Info goes here</dd>
+                </dl>
+            </div>
+
+            <div class="space-y-2">
+                <h4 class="text-lg font-semibold">Order Details</h4>
+                <dl>
+                    <dt class="font-medium">Email Address</dt>
+                    <dd class="mt-1 font-light">{{order.buyerEmail}}</dd>
+                </dl>
+
+                <dl>
+                    <dt class="font-medium">Order Status</dt>
+                    <dd class="mt-1 font-light">{{order.status}}</dd>
+                </dl>
+
+
+                <dl>
+                    <dt class="font-medium">Order Date</dt>
+                    <dd class="mt-1 font-light">{{order.orderDate | date : 'medium'}}</dd>
+                </dl>
+            </div>
+        </div>
+
+        <div class="mt-4">
+            <div class="border-y border-gray-200">
+                <table class="w-full text-center">
+                    <tbody class="divide-y decoration-gray-200">
+                        @for (item of order.orderItems; track item.productId) {
+                        <tr>
+                            <td class="py-4">
+                                <div class="flex items-center gap-4">
+                                    <img src="{{item.pictureUrl}}" alt="Product Image" class="w-10 h-10">
+                                    <span>{{item.productName}}</span>
+                                </div>
+                            </td>
+
+                            <td class="p-4">{{item.quantity}}</td>
+                            <td class="p-4 text-right">{{item.price | currency }}</td>
+
+                        </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="space-y-4 rounded-lg border-t">
+            <div class="space-y-4 rounded-lg border-y border-gray-200 p-4 bg-white shadow-sm">
+                <p class="text-xl font-semibold">Order Summary</p>
+                <div class="space-y-4">
+                    <div class="space-y-2">
+                        <dl class="flex items-center justify-between gap-4">
+                            <dt class="font-medium text-gray-500">Subtotal</dt>
+                            <dd class="font-medium text-gray-900">{{order.subtotal | currency}}</dd>
+                        </dl>
+
+                        <dl class="flex items-center justify-between gap-4">
+                            <dt class="font-medium text-gray-500">Discount</dt>
+                            <dd class="font-medium text-green-900">-$0.00</dd>
+                        </dl>
+
+                        <dl class="flex items-center justify-between gap-4">
+                            <dt class="font-medium text-gray-500">Delivery fee</dt>
+                            <dd class="font-medium text-gray-900">{{order.shippingPrice | currency}}</dd>
+                        </dl>
+
+                        <dl class="flex items-center justify-between gap-4 border-t border-gray-200 pt-2">
+                            <dt class="font-medium text-gray-500">Total</dt>
+                            <dd class="font-medium text-gray-900">{{order.total | currency}}</dd>
+                        </dl>
+
+                    </div>
+
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+</mat-card>
+}
