--- a/client/src/app/features/shop/product-item/product-item.component.html
+++ b/client/src/app/features/shop/product-item/product-item.component.html
@@ -1,16 +1,23 @@
-
-@if(product){
-<mat-card appearance="raised" routerLink="/shop/{{product.id}}" class="product-card">
-    <img src="{{product.pictureUrl}}" alt="image of {{product.name}}">
+@if (product) {
+  <mat-card
+    appearance="raised"
+    routerLink="/shop/{{ product.id }}"
+    class="product-card"
+  >
+    <img src="{{ product.pictureUrl }}" alt="image of {{ product.name }}" />
     <mat-card-content class="mt-2">
-        <h2 class="text-sm font-semibold uppercase">{{product.name}}</h2>
-        <p class="font-light">{{product.price | currency}}</p>
+      <h2 class="text-sm font-semibold uppercase">{{ product.name }}</h2>
+      <p class="font-light">{{ product.price | currency }}</p>
     </mat-card-content>
     <mat-card-actions (click)="$event.stopPropagation()">
-        <button mat-stroked-button class="w-full" (click)="cartService.addItemToCart(product)">
-            <mat-icon>add_shopping-cart</mat-icon>
-            Add to Cart
-        </button>
+      <button
+        mat-stroked-button
+        class="w-full"
+        (click)="cartService.addItemToCart(product)"
+      >
+        <mat-icon>add_shopping-cart</mat-icon>
+        Add to Cart
+      </button>
     </mat-card-actions>
-</mat-card>
+  </mat-card>
 }
